SERVER-128632 Tighten cancellation guard in MigrationDestinationManager abort (#55593)

GitOrigin-RevId: fe81d8d8067601b1118d63c6240098c4ae33fac6